--- a/Izquierda2.html
+++ b/Izquierda2.html
@@ -20,6 +20,7 @@
 <a target="Derecha2" href="Carpetapracticas/Practica13.html">Practica 13</a><br><br>
 <a target="Derecha2" href="Carpetapracticas/practica15.html">Practica 15</a><br><br>
 <a target="Derecha2" href="Carpetapracticas/practica16.html">Practica 16</a><br><br>
+<a target="Derecha2" href="https://pandoproyectoxd.github.io/">PROYECTO</a><br><br>
 
 </font>
 </body>
