--- a/Izquierda2.html
+++ b/Izquierda2.html
@@ -21,7 +21,7 @@
 <a target="Derecha2" href="Carpetapracticas/practica15.html">Practica 15</a><br><br>
 <a target="Derecha2" href="Carpetapracticas/practica16.html">Practica 16</a><br><br>
 <a target="Derecha2" href="https://pandoproyectoxd.github.io/">PROYECTO</a><br><br>
-<a target="Derecha2" href="CSS/index.html">CSS</a><br><br>
+<a target="Derecha2" href="CSS/index.html">CSS (abrir en una nueva pestaña para cargar mejor)</a><br><br>
 
 </font>
 </body>
