--- a/CSS/index.html
+++ b/CSS/index.html
@@ -3,16 +3,16 @@
 </head>
 
 <frameset cols="10%,*,10%" frameborder="0">
- <frame name="izquierda" src="izquierda.html" scrolling="no">
+ <frame name="izquierda" src="izquierda.html" scrolling="yes">
  
  
  <frameset rows="100px,*,100px" frameborder="0">
- <frame name="enca" src="enca.html" scrolling="no">
+ <frame name="enca" src="enca.html" scrolling="yes">
  <frame name="med" src="med.html" scrolling="yes">
- <frame name="sub" src="sub.html" scrolling="no">
+ <frame name="sub" src="sub.html" scrolling="yes">
  </frameset>
  
- <frame name="derecha" src="derecha.html" scrolling="no">
+ <frame name="derecha" src="derecha.html" scrolling="yes">
  
  
  </frameset>
