--- a/practica20.html
+++ b/practica20.html
@@ -133,12 +133,12 @@
 				<input class="slide-open" type="radio" id="slide-3" 
                       name="slide" aria-hidden="true" hidden="">
                 <div class="slide-item">
-                    <center><img width=300px src="https://static.wikia.nocookie.net/dragonball/images/8/82/SS3_FCM.png/revision/latest/scale-to-width/360?cb=20160410144508">
+                    <center><img width=300px src="https://i.pinimg.com/originals/19/9a/32/199a329fe4bec52fc6f1cf70dde1fdc2.jpg">
                 </div>
 				<input class="slide-open" type="radio" id="slide-4" 
                       name="slide" aria-hidden="true" hidden="">
                 <div class="slide-item">
-                    <center><img width=300px src="https://static.wikia.nocookie.net/dragonball/images/6/68/SSG_profile1.png/revision/latest?cb=20170207135550">
+                    <center><img width=300px src="https://i.pinimg.com/564x/d9/96/d3/d996d3352d56e52c5a3a01952a61b1bf.jpg">
                 </div>
                 <input class="slide-open" type="radio" id="slide-5" 
                       name="slide" aria-hidden="true" hidden="">
