--- a/Izquierda2.html
+++ b/Izquierda2.html
@@ -23,7 +23,7 @@
 <a target="Derecha2" href="https://pandoproyectoxd.github.io/">PROYECTO</a><br><br>
 <a target="Derecha2" href="CSS/index.html">CSS (abrir en una nueva pestaña para cargar mejor)</a><br><br>
 <a target="Derecha2" href="practica20.html">Carrusel de Imágenes</a><br><br>  
-<a target"Derecha2" href="AprendiendoCSS/index.html">Practica 20 (Aprendiendo CSS)</a><br><br>
+<a target="Derecha2" href="AprendiendoCSS/index.html">Practica 20 (Aprendiendo CSS)</a><br><br>
 </font>
 </body>
 </html>
